test/should-fail/jfxc1901.fx
/*
 * @test/compile-error
 */
import javafx.animation.KeyFramexx;
import javafx.xxanimation.KeyFrame;
